--- a/resume/jaman-uddin.tex
+++ b/resume/jaman-uddin.tex
@@ -39,7 +39,7 @@ Collaboration Tools & Slack, Microsoft Teams, Windows, Debian, Ubuntu\\
 
 \begin{rSection}{WORK HISTORY}
 
-\textbf{Software Engineer} \hfill Aug 2019 - Present\\
+\textbf{Software Engineer} \hfill Jan 2022 - Apr 2024\\
 imranslab \hfill \textit{Montréal, QC (Remote)}
  \begin{itemize}
     \item Developed and launched a Job Finder platform, increasing user engagement by 30\% by integrating predictive AI algorithms, directly leading to a monthly active user increase.
@@ -47,7 +47,7 @@ imranslab \hfill \textit{Montréal, QC (Remote)}
     \item Reduced operational costs by 20\% and improved deployment cycles by 30\% by transitioning legacy systems to a cloud-based infrastructure.
  \end{itemize}
 
-\textbf{Software Development Intern} \hfill Feb 2019 - Jul 2019\\
+\textbf{Software Development Intern} \hfill Jun 2021 - Dec 2021\\
 imranslab \hfill \textit{Montréal, QC (Remote)}
  \begin{itemize}
     \item Successfully refactored 5000 lines of legacy Python code into a modular, maintainable structure adhering to SOLID principles, resulting in a 50\% improvement in code maintainability and a 30\% increase in development speed.
