--- a/resume/jaman-uddin.tex
+++ b/resume/jaman-uddin.tex
@@ -14,7 +14,7 @@
 
 \begin{rSection}{PROFESSIONAL SUMMARY}
 
-{Dynamic Software Engineer with five years at imranslab, specializing in Python and Django with a strong focus on AI/ML integration. Proven leader in spearheading projects from inception to deployment, enhancing system efficiency and user engagement. Adept in Agile methodologies, committed to continual learning and development.}
+{Dynamic Software Engineer with two years at imranslab, specializing in Python and Django with a strong focus on AI/ML integration. Proven leader in spearheading projects from inception to deployment, enhancing system efficiency and user engagement. Adept in Agile methodologies, committed to continual learning and development.}
 
 \end{rSection}
 
