--- a/resume/jaman-uddin.tex
+++ b/resume/jaman-uddin.tex
@@ -25,8 +25,8 @@
 \begin{rSection}{SKILLS}
 
 \renewcommand{\arraystretch}{1.5}
-\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} >{\raggedright\arraybackslash}p{14cm}}
-Software Development & Python, Django, JavaScript, React.js, TypeScript, Node.js, Flutter, Go\\
+\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} >{\raggedright\arraybackslash}p{14.2613cm}}
+Software Development & Python, Django, JavaScript, TypeScript, React.js, Node.js, Flutter, Go\\
 
 Technology Ecosystems & Django REST Framework(DRF), FastAPI, RESTful API, Google Cloud Platform(GCP), RDBMS(Postgres, MySQL), NoSQL(MongoDB)\\
 
@@ -34,7 +34,7 @@ QA \& DevOps & Selenium, Docker, Terraform, CircleCI\\
 
 Dev Tools & Git, GitHub, Jupyter Notebook, VS Code, JetBrains, JIRA, Confluence, Slack, Microsoft Teams, Windows, Debian, Ubuntu\\
 
-Core Skills & Clean Code, Troubleshooting, Performance Optimization, Responsive Design, Cross-Browser Compatibility, Unit Testing, Team Collaboration, Agile Methodologies, Cross-Functional Leadership, Mentoring, Public Speaking, Time Management, Interpersonal Skills, Teamwork, Detail Orientation, Multitasking, Problem-Solving, Critical Thinking, Adaptability, Strategic Communication, Project Documentation, Innovation and Collaboration\\
+Core Skills & Clean Code, Troubleshooting, Performance Optimization, Responsive Design, Cross-Browser Compatibility, Unit Testing, Team Collaboration, Agile Methodologies, Cross-Functional Leadership, Mentoring, Public Speaking, Time Management, Interpersonal Skills, Detail Orientation, Multitasking, Problem-Solving, Critical Thinking, Adaptability, Strategic Communication, Project Documentation, Innovation\\
 \end{tabular}\\
 \end{rSection}
 
