--- a/resume/job-oriented-resume/full-stack-developer-django-and-react/jaman-uddin.tex
+++ b/resume/job-oriented-resume/full-stack-developer-django-and-react/jaman-uddin.tex
@@ -25,8 +25,8 @@
 \begin{rSection}{SKILLS}
 
 \renewcommand{\arraystretch}{1.5}
-\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} >{\raggedright\arraybackslash}p{14cm}}
-Software Development & Python, Django, JavaScript, React.js, TypeScript, Node.js, Flutter, Go\\
+\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} >{\raggedright\arraybackslash}p{14.2613cm}}
+Software Development & Python, Django, JavaScript, TypeScript, React.js, Node.js, Flutter, Go\\
 
 Technology Ecosystems & Django REST Framework(DRF), FastAPI, RESTful API, Google Cloud Platform(GCP), RDBMS(Postgres, MySQL), NoSQL(MongoDB)\\
 
