--- a/resume/jaman-uddin.tex
+++ b/resume/jaman-uddin.tex
@@ -58,7 +58,7 @@ imranslab \hfill \textit{Montréal, QC (Remote)}
 imranslab \hfill \textit{Montréal, QC (Remote)}
  \begin{itemize}
     \item Refactored 5000 lines of legacy Python code into a modular, maintainable structure adhering to SOLID principles, resulting in a 50\% improvement in code maintainability and a 30\% increase in development speed.
-    \item Enhanced troubleshooting efficiency by 25\% by developing and implementing generative AI prompts for debugging. and reducing error resolution time by 40\%.
+    \item Enhanced troubleshooting efficiency by 25\% by developing and implementing generative AI prompts for debugging and reducing error resolution time by 40\%.
     \item Led the migration from local servers to cloud infrastructure, improving system scalability and reducing server downtime by 35\%, which enhanced overall system reliability by 45\%.
  \end{itemize}
 
