Update: July 2024 - New info and links

--- a/resume/job-oriented-resume/full-stack-developer-django-and-react/jaman-uddin.tex
+++ b/resume/job-oriented-resume/full-stack-developer-django-and-react/jaman-uddin.tex
@@ -5,7 +5,7 @@
 \name{Jaman Uddin} % Your name
 \address{\textbf{Full Stack Developer}}    % Role you are applying for
 \address{+880 167 385-0025 \\ Uttara, Dhaka, Bangladesh}
-\address{\href{mailto:zamaan.md19@gmail.com}{zamaan.md19@gmail.com} \\ \href{https://www.linkedin.com/in/swe-jaman-me/}{linkedin.com/in/swe-jaman-me} \\ \href{https://github.com/RootProgrammer}{github.com/RootProgrammer}}
+\address{\href{mailto:swe.jaman.me@gmail.com}{swe.jaman.me@gmail.com} \\ \href{https://www.linkedin.com/in/swe-jaman-me/}{linkedin.com/in/swe-jaman-me} \\ \href{https://github.com/RootProgrammer}{github.com/RootProgrammer}}
 
 \begin{document}
 
