New Resume: Friday, 13th of September 2024

--- a/resume/jaman-uddin.tex
+++ b/resume/jaman-uddin.tex
@@ -34,7 +34,7 @@ QA \& DevOps & Selenium, Docker, Terraform, CircleCI\\
 
 Dev Tools & Git, GitHub, Jupyter Notebook, VS Code, JetBrains, JIRA, Confluence, Slack, Microsoft Teams, Windows, Debian, Ubuntu\\
 
-Core Skills & Clean Code, Troubleshooting, Performance Optimization, Responsive Design, Cross-Browser Compatibility, Unit Testing, Team Collaboration, Agile Methodologies, Cross-Functional Leadership, Mentoring, Public Speaking, Time Management, Interpersonal Skills, Detail Orientation, Multitasking, Problem-Solving, Critical Thinking, Adaptability, Strategic Communication, Project Documentation, Innovation\\
+Core Competencies & Clean Code, Troubleshooting, Performance Optimization, Responsive Design, Cross-Browser Compatibility, Unit Testing, Team Collaboration, Agile Methodologies, Cross-Functional Leadership, Mentoring, Public Speaking, Time Management, Interpersonal Skills, Detail Orientation, Multitasking, Problem-Solving, Critical Thinking, Adaptability, Strategic Communication, Project Documentation, Innovation\\
 \end{tabular}\\
 \end{rSection}
 
@@ -97,6 +97,19 @@ imranslab \hfill \textit{Montréal, QC (Remote)}
 % \begin{itemize}
 %     \item \textbf{Achievements:} Participated in ICPC Regional 2019, Google Kick Start 2021; excelled in national coding contests.
 %     \item \textbf{Interests:} Passionate about emerging technologies, AI advancements, mentorship, and cinematic arts.
+% \end{itemize}
+
+% \end{rSection}
+
+%----------------------------------------------------------------------------------------
+% ADDITIONAL INFORMATION
+%----------------------------------------------------------------------------------------
+
+% \begin{rSection}{ADDITIONAL INFORMATION}
+
+% \begin{itemize}
+%     \item Willing to relocate to Bangkok and work in a hybrid setting.
+%     \item Confident in English communication and collaborating in agile, cross-functional environments.
 % \end{itemize}
 
 % \end{rSection}
