--- a/resume/job-oriented-resume/full-stack-developer-ruby-js-and-go/jaman-uddin.tex
+++ b/resume/job-oriented-resume/full-stack-developer-ruby-js-and-go/jaman-uddin.tex
@@ -3,7 +3,7 @@
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{Jaman Uddin} % Your name
-\address{\textbf{Software Engineer}}    % Role you are applying for
+\address{\textbf{Full Stack Developer}}    % Role you are applying for
 \address{+880 167 385-0025 \\ Uttara, Dhaka, Bangladesh}
 \address{\href{mailto:swe.jaman.me@gmail.com}{swe.jaman.me@gmail.com} \\ \href{https://www.linkedin.com/in/swe-jaman-me/}{linkedin.com/in/swe-jaman-me} \\ \href{https://github.com/RootProgrammer}{github.com/RootProgrammer}}
 
@@ -15,7 +15,7 @@
 
 \begin{rSection}{PROFESSIONAL SUMMARY}
 
-{Dynamic Software Engineer with two years at imranslab, specializing in Python and Django with a strong focus on AI/ML integration. Proven leader in spearheading projects from inception to deployment, enhancing system efficiency and user engagement. Adept in Agile methodologies, committed to continual learning and development.}
+{Dynamic Full Stack Developer with two years at imranslab, specializing in Python and Django with a strong focus on AI/ML integration. Proven leader in spearheading projects from inception to deployment, enhancing system efficiency and user engagement. Adept in Agile methodologies, committed to continual learning and development.}
 
 \end{rSection}
 
@@ -26,7 +26,7 @@
 
 \renewcommand{\arraystretch}{1.5}
 \begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} >{\raggedright\arraybackslash}p{14.2613cm}}
-Software Development & Python, Django, JavaScript, TypeScript, React.js, Node.js, Flutter, Go\\
+Software Development & Python, Django, JavaScript, TypeScript, React.js, Node.js, Go\\
 
 Technology Ecosystems & Django REST Framework(DRF), FastAPI, RESTful API, Google Cloud Platform(GCP), RDBMS(Postgres, MySQL), NoSQL(MongoDB)\\
 
@@ -34,7 +34,7 @@ QA \& DevOps & Selenium, Docker, Terraform, CircleCI\\
 
 Dev Tools & Git, GitHub, Jupyter Notebook, VS Code, JetBrains, JIRA, Confluence, Slack, Microsoft Teams, Windows, Debian, Ubuntu\\
 
-Core Skills & Clean Code, Troubleshooting, Performance Optimization, Responsive Design, Cross-Browser Compatibility, Unit Testing, Team Collaboration, Agile Methodologies, Cross-Functional Leadership, Mentoring, Public Speaking, Time Management, Interpersonal Skills, Detail Orientation, Multitasking, Problem-Solving, Critical Thinking, Adaptability, Strategic Communication, Project Documentation, Innovation\\
+Core Competencies & Clean Code, Troubleshooting, Performance Optimization, Responsive Design, Cross-Browser Compatibility, Unit Testing, Team Collaboration, Agile Methodologies, Cross-Functional Leadership, Mentoring, Product Mindset, English Communication, Time Management, Interpersonal Skills, Problem-Solving, Critical Thinking, Adaptability\\
 \end{tabular}\\
 \end{rSection}
 
@@ -100,5 +100,18 @@ imranslab \hfill \textit{Montréal, QC (Remote)}
 % \end{itemize}
 
 % \end{rSection}
+
+%----------------------------------------------------------------------------------------
+% ADDITIONAL INFORMATION
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{ADDITIONAL INFORMATION}
+
+\begin{itemize}
+    \item Willing to relocate to Bangkok and work in a hybrid setting.
+    \item Confident in English communication and collaborating in agile, cross-functional environments.
+\end{itemize}
+
+\end{rSection}
 
 \end{document}
