--- a/resume/jaman-uddin.tex
+++ b/resume/jaman-uddin.tex
@@ -109,6 +109,7 @@ imranslab \hfill \textit{Montréal, QC (Remote)}
 
 % \begin{itemize}
 %     \item Willing to relocate to Bangkok and work in a hybrid setting.
+%     \item Open to learning new technologies like Ruby and Elixir to adapt to evolving client needs.
 %     \item Confident in English communication and collaborating in agile, cross-functional environments.
 % \end{itemize}
 
