--- a/resume/job-oriented-resume/full-stack-developer-ruby-js-and-go/jaman-uddin.tex
+++ b/resume/job-oriented-resume/full-stack-developer-ruby-js-and-go/jaman-uddin.tex
@@ -34,7 +34,7 @@ QA \& DevOps & Selenium, Docker, Terraform, CircleCI\\
 
 Dev Tools & Git, GitHub, Jupyter Notebook, VS Code, JetBrains, JIRA, Confluence, Slack, Microsoft Teams, Windows, Debian, Ubuntu\\
 
-Core Competencies & Clean Code, Troubleshooting, Performance Optimization, Responsive Design, Cross-Browser Compatibility, Unit Testing, Team Collaboration, Agile Methodologies, Cross-Functional Leadership, Mentoring, Product Mindset, English Communication, Time Management, Interpersonal Skills, Problem-Solving, Critical Thinking, Adaptability\\
+Core Competencies & Clean Code, Automated Testing, Performance Optimization, Agile Methodologies, Product Mindset\\
 \end{tabular}\\
 \end{rSection}
 
@@ -109,6 +109,7 @@ imranslab \hfill \textit{Montréal, QC (Remote)}
 
 \begin{itemize}
     \item Willing to relocate to Bangkok and work in a hybrid setting.
+    \item Open to learning new technologies like Ruby and Elixir to adapt to evolving client needs.
     \item Confident in English communication and collaborating in agile, cross-functional environments.
 \end{itemize}
 
