Update: Wednesday, 25th of Decemeber, 2024

--- a/resume/job-oriented-resume/star-coder-resume/jaman-uddin.tex
+++ b/resume/job-oriented-resume/star-coder-resume/jaman-uddin.tex
@@ -115,26 +115,26 @@ imranslab \hfill \textit{Montréal, QC (Remote)}
 %	RECOGNITION & COMPETITIONS
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{RECOGNITION \& COMPETITIONS}
+% \begin{rSection}{RECOGNITION \& COMPETITIONS}
 
-\begin{itemize}
-    \item Participated in coding contests (ICPC 2018, UVa Online Judge, HackerRank, Google Kick Start 2021) showcasing algorithmic problem-solving skills.
-    \item Recognized for outstanding contributions to team-based software development projects.
-\end{itemize}
+% \begin{itemize}
+%     \item Participated in coding contests (ICPC 2018, UVa Online Judge, HackerRank, Google Kick Start 2021) showcasing algorithmic problem-solving skills.
+%     \item Recognized for outstanding contributions to team-based software development projects.
+% \end{itemize}
 
-\end{rSection}
+% \end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	ADDITIONAL DETAILS
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{RADDITIONAL DETAILS}
+% \begin{rSection}{RADDITIONAL DETAILS}
 
-\begin{itemize}
-    \item \textbf{Availability:} Immediate
-    \item \textbf{Interests:} Exploring cutting-edge technologies, competitive programming, AI/ML integration
-\end{itemize}
+% \begin{itemize}
+%     \item \textbf{Availability:} Immediate
+%     \item \textbf{Interests:} Exploring cutting-edge technologies, competitive programming, AI/ML integration
+% \end{itemize}
 
-\end{rSection}
+% \end{rSection}
 
 \end{document}
